# localfy

./: Cargo.toml
src/: app.rs  cache.rs  configuration.rs  constants.rs  database.rs  download.rs  main.rs  player.rs  playlist.rs  renderer.rs  song.rs  time.rs
src/gui/: add_button_animated.rs  gui.rs.old  helper.rs  mod.rs  model.rs  newgui.rs  page.rs  progress_bar.rs  song.rs
src/gui/components/: album.rs
src/gui/pages/: controls.rs  download.rs  home.rs  mod.rs  navbar.rs  search.rs  settings.rs
