[package]
name = "localfy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["svg"] }
futures-util = "0.3.30"
image = "0.24.8"
rand = "0.8.5"
reqwest = { version = "0.11.23", features = ["stream"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tidal_rs = {path = "D:/dev/tidal_rs"}
tokio = { version = "1.35.1", features = ["full"] }

[dependencies.vlc-rs]
git = "https://code.videolan.org/videolan/vlc-rs.git"
